# pythonando

./: .gitignore  README.md  pyproject.toml
scripts/text_to_mp3/: text_to_mp3_converter.py
