[tool.poetry]
name = "pythonando"
version = "0.1.0"
description = ""
authors = ["FernandoViegas <fndtech2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gtts = "^2.5.3"
pyttsx3 = "^2.98"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
